--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "string_extract"
+name = "oxide_serpentine_string"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "string_extract"
+name = "oxide_serpentine_string"
 crate-type = ["cdylib"]
 
 [dependencies]
