--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ once_cell = { version = "1.18.0", features = [] }
 strum = "0.25"
 strum_macros = { version = "0.25", features = [] }
 line-numbers = "0.2.2"
+syntect = "5.1.0"
