--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.3,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "string_extract"
+name = "oxide_serpentine_string"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -14,3 +14,5 @@ dynamic = ["version"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
+python-source = "python"
+module-name = "oxide_serpentine_string.xtractor"
